# agent-whip

./: .env.example  .gitignore  README.md  agent-whip.example.yml  pyproject.toml
docs/: ARCHITECTURE.md  CARA_PAKAI.md  CLI_VS_API.md  FLOW_TERBARU.md  HANDOVER_DESIGN.md  IMPLEMENTATION_PLAN.md  PLAN_SPEC.md  PRD.md  PROMPT_TEMPLATES.md
examples/: example-plan.md  plan-simple.md
src/agent_whip/: __init__.py  orchestrator.py
src/agent_whip/cli/: main.py
src/agent_whip/config/: __init__.py  settings.py
src/agent_whip/context/: __init__.py  document.py  summarizer.py
src/agent_whip/events/: __init__.py  emitter.py
src/agent_whip/models/: __init__.py  handover.py  plan.py  state.py  task.py
src/agent_whip/parser/: __init__.py  flexible_parser.py  markdown_parser.py
src/agent_whip/qa/: __init__.py  engine.py  tickets.py
src/agent_whip/queue/: __init__.py  task_queue.py
src/agent_whip/store/: __init__.py  state_store.py
src/agent_whip/tracker/: __init__.py  evaluator.py
src/agent_whip/workers/: __init__.py  base.py  claude.py  claude_cli.py  handover.py  manager.py  opencode.py  opencode_cli.py  token_tracker.py
tests/: test_critical_fixes.py  test_real_cli.py  test_workers.py
tests/handover/: __init__.py  test_handover_poc.py
