[tool.poetry]
name = "agent-whip"
version = "0.1.0"
description = "AI Agent Orchestration for Autonomous Development"
authors = ["Erik <erik@example.com>"]
readme = "README.md"
packages = [{include = "agent_whip", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.18.0"
typer = {extras = ["all"], version = "^0.24.0"}
pydantic = "^2.0.0"
pyyaml = "^6.0"
rich = "^13.0.0"
playwright = "^1.40.0"
aiofiles = "^23.0.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
agent-whip = "agent_whip.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
